[tool.poetry]
name = "PyPlanetX"
version = "0.1.0"
description = "Planet X* inspired game."
authors = ["EasonTek"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.12"
raylib = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
